--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -118,9 +118,18 @@
   }
 }
 
+
+// инпуты
+.form__input-wrapper {
+  // обертка нужна для стилизации состояния disabled
+  @include flex(column, flex-start, flex-start);
+  width: 100%;
+}
+
 .form__label {
   margin-bottom: 2px;
   color: rgba(240, 239, 233, 0.8);
+  order: 1;
 
   @media (max-width: $mobile-width-max) {
     font-size: 12px;
@@ -147,6 +156,7 @@
   border-radius: 8px;
   border: 1px solid rgba(255, 255, 255, 0.3);
   background-color: transparent;
+  order: 2;
 
   &:hover,
   &:active,
@@ -218,56 +228,56 @@
     }
   }
 
-  &::before {
-    content: "";
-    display: block;
-    position: absolute;
-    top: 11px;
-    left: -30px;
-    width: 20px;
-    height: 20px;
-    background-color: $basic-light-color;
-    border: 1px solid $basic-light-color;
-    border-radius: 2px;
+  // &::before {
+  //   content: "";
+  //   display: block;
+  //   position: absolute;
+  //   top: 11px;
+  //   left: -30px;
+  //   width: 20px;
+  //   height: 20px;
+  //   background-color: $basic-light-color;
+  //   border: 1px solid $basic-light-color;
+  //   border-radius: 2px;
 
-    @media ((min-width: $tablet-width-min) and (max-width: $tablet-width-max)) {
-      top: -4px;
-    }
+  //   @media ((min-width: $tablet-width-min) and (max-width: $tablet-width-max)) {
+  //     top: -4px;
+  //   }
 
-    @media (min-width: $desktop-width-min) {
-      top: -3px;
-    }
-  }
+  //   @media (min-width: $desktop-width-min) {
+  //     top: -3px;
+  //   }
+  // }
 
-  &::after {
-    content: "";
-    display: none;
-    position: absolute;
-    left: -25px;
-    width: 10px;
-    height: 10px;
-    mask-image: url("/__spritemap#sprite-checked-icon-view");
-    background-color: $accent-color;
-    mask-size: 10px 8px;
-    mask-repeat: no-repeat;
+  // &::after {
+  //   content: "";
+  //   display: none;
+  //   position: absolute;
+  //   left: -25px;
+  //   width: 10px;
+  //   height: 10px;
+  //   mask-image: url("/__spritemap#sprite-checked-icon-view");
+  //   background-color: $accent-color;
+  //   mask-size: 10px 8px;
+  //   mask-repeat: no-repeat;
 
-    @media (max-width: $mobile-width-max) {
-      top: 17px;
-    }
+  //   @media (max-width: $mobile-width-max) {
+  //     top: 17px;
+  //   }
 
-    @media (min-width: $tablet-width-min) {
-      top: 2px;
-    }
-  }
+  //   @media (min-width: $tablet-width-min) {
+  //     top: 2px;
+  //   }
+  // }
 }
 
-.form__input-checkbox {
-  display: none;
-}
+// .form__input-checkbox {
+//   display: none;
+// }
 
-.form__input-checkbox:checked+.form__label--checkbox::after {
-  display: block;
-}
+// .form__input-checkbox:checked+.form__label--checkbox::after {
+//   display: block;
+// }
 
 // кнопка "отправить"
 .form__send {
