--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -13,6 +13,7 @@
 @import "blocks/button.scss";
 @import "blocks/button-arrow.scss";
 @import "blocks/custom-select.scss";
+@import "blocks/custom-checkbox.scss";
 @import "blocks/arrow.scss";
 @import "blocks/social-list.scss";
 @import "blocks/modal.scss";
