--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -209,6 +209,11 @@
 
 // кастомный checkbox
 .form__label--checkbox {
+  @media (max-width: $mobile-width-max) {
+    font-size: 12px;
+    line-height: 14px;
+  }
+
   @media (min-width: $tablet-width-min) {
     margin-top: 5px;
     font-size: 12px;
