--- a/source/sass/blocks/modal.scss
+++ b/source/sass/blocks/modal.scss
@@ -226,8 +226,6 @@
 
 // кастомный checkbox
 .modal__checkbox-wrapper {
-  @include flex(row, flex-start, center);
-
   @media (max-width: $mobile-width-max) {
     margin-bottom: 10px;
   }
@@ -238,10 +236,6 @@
 }
 
 .modal__label--checkbox {
-  position: relative;
-  margin: 0;
-  margin-left: 30px;
-
   @media (max-width: $mobile-width-max) {
     font-size: 12px;
     line-height: 14px;
@@ -253,54 +247,22 @@
   }
 
   &::before {
-    content: "";
-    display: block;
-    position: absolute;
-    left: -30px;
-    width: 20px;
-    height: 20px;
     background-color: $accent-color;
     border: 1px solid $accent-color;
-    border-radius: 2px;
-
-    @media (max-width: $mobile-width-max) {
-      top: 3px;
-    }
-
-    @media (min-width: $tablet-width-min) {
-      top: -5px;
-    }
   }
 
   &::after {
-    content: "";
-    display: none;
-    position: absolute;
-    left: -25px;
-    width: 10px;
-    height: 10px;
-    mask-image: url("/__spritemap#sprite-checked-icon-view");
     background-color: $basic-light-color;
-    mask-size: 10px 8px;
-    mask-repeat: no-repeat;
-
-    @media (max-width: $mobile-width-max) {
-      top: 9px;
-    }
-
-    @media (min-width: $tablet-width-min) {
-      top: 2px;
-    }
   }
 }
 
-.modal__input-checkbox {
-  display: none;
-}
+// .modal__input-checkbox {
+//   display: none;
+// }
 
-.modal__input-checkbox:checked+.modal__label--checkbox::after {
-  display: block;
-}
+// .modal__input-checkbox:checked+.modal__label--checkbox::after {
+//   display: block;
+// }
 
 // кнопка "отправить"
 .modal__send {
