feat: add favicon fix: change custom select position in form block, add states in custom checkbox

--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -195,6 +195,16 @@
   }
 }
 
+.form__custom-select {
+  @media (max-width: $mobile-width-max) {
+    top: 82px;
+  }
+
+  @media (min-width: $tablet-width-min) {
+  top: 88px;
+  }
+}
+
 .form__input-wrapper::after {
   @media (max-width: $mobile-width-max) {
     top: 49px;
