--- a/source/sass/blocks/custom-checkbox.scss
+++ b/source/sass/blocks/custom-checkbox.scss
@@ -51,12 +51,37 @@
 
 .custom-checkbox__input {
   display: none;
+  // position: absolute;
 }
 
-.custom-checkbox__input:hover .custom-checkbox__label::before,
-.custom-checkbox__input:focus .custom-checkbox__label::before {
-
+// состояния чекбокса
+.custom-checkbox__input:hover+.custom-checkbox__label::before,
+.custom-checkbox__input:focus+.custom-checkbox__label::before {
+  background-color: transparent;
+  border-color: $basic-light-color;
 }
+
+.custom-checkbox__input:disabled+.custom-checkbox__label::before {
+  background-color: rgba(255, 255, 255, 0.6);
+  border-color: $basic-light-color;
+}
+
+.custom-checkbox__input:invalid+.custom-checkbox__label::before {
+  background-color: rgba(255, 94, 102, 0.2);
+  border-color: #FF5E66;
+}
+
+// состояния чекбокса, если проставлена галочка
+// .custom-checkbox__input:checked:hover+.custom-checkbox__label::after,
+// .custom-checkbox__input:checked:focus+.custom-checkbox__label::after,
+// .custom-checkbox__input:checked:disabled+.custom-checkbox__label::after {
+//   background-color: $basic-light-color;
+// }
+
+// .custom-checkbox__input:checked:disabled {
+//   background-color: #A9AFB7;
+// }
+
 
 .custom-checkbox__input:checked+.custom-checkbox__label::after {
   display: block;
