--- a/source/sass/common/variables.scss
+++ b/source/sass/common/variables.scss
@@ -3,6 +3,7 @@
 $basic-dark-color: #484848;
 $basic-light-color: #ffffff;
 $extra-light-color: #f0efe9;
+$extra-dark-color: #275699;
 $accent-color: #316dc2;
 $disabled-color: #a9afb7;
 
