--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -174,6 +174,10 @@
   }
 }
 
+.form__input:disabled ~.form__label {
+  color: rgba(240, 239, 233, 0.6);
+}
+
 .form__input--message {
   @media (max-width: $mobile-width-max) {
     height: 94px;
