--- a/source/sass/blocks/hero.scss
+++ b/source/sass/blocks/hero.scss
@@ -259,7 +259,7 @@
 }
 
 .hero__bullet--active {
-  background-color: #275699;
+  background-color: $extra-dark-color;
 }
 
 .hero__pagination.swiper-pagination-bullets.swiper-pagination-horizontal {
