--- a/source/sass/blocks/news.scss
+++ b/source/sass/blocks/news.scss
@@ -464,8 +464,8 @@
   }
 
   &:active {
-    background-color: #275699;
-    border-color: #275699;
+    background-color: $extra-dark-color;
+    border-color: $extra-dark-color;
   }
 }
 
