--- a/source/sass/blocks/faq.scss
+++ b/source/sass/blocks/faq.scss
@@ -66,7 +66,7 @@
 
   border: 2px solid $accent-color;
   border-radius: 14px;
-
+  cursor: pointer;
 
   @media (max-width: $mobile-width-max) {
     width: $mobile-content-width;
@@ -153,6 +153,7 @@
   background-color: $accent-color;
   border: 1px solid $accent-color;
   border-radius: 50%;
+  cursor: pointer;
 
   @media (min-width: $tablet-width-min) {
     align-self: flex-start;
