--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -26,6 +26,7 @@
     @include flex(row, space-between, center);
     flex-wrap: wrap;
     row-gap: 25px;
+    column-gap: 10px;
     width: $tablet-content-width;
   }
 
