--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -15,11 +15,11 @@
 .form__main-wrapper {
   background-repeat: no-repeat;
   background-size: cover;
+  background-color: $accent-color;
 
   @media (max-width: $mobile-width-max) {
     padding: 43px 0 40px;
     width: 100%;
-    background-size: cover;
     background-image:
       image-set(url("../../img/form/form-background-mobile@1x.webp") type("image/webp") 1x,
         url("../../img/form/form-background-mobile@2x.webp") type("image/webp") 2x,
@@ -27,7 +27,7 @@
         url("../../img/form/form-background-mobile@2x.jpg") type("image/jpg") 2x);
   }
 
-  @media ((min-width: $tablet-width-min) and (max-width: $tablet-width-max)) {
+  @media (min-width: $tablet-width-min) {
     margin: 0 auto;
     width: 652px;
     border-radius: 16px;
@@ -39,9 +39,7 @@
   }
 
   @media (min-width: $desktop-width-min) {
-    margin: 0 auto;
     width: $desktop-content-width;
-    border-radius: 16px;
     background-image:
       image-set(url("../../img/form/form-background-desktop@1x.webp") type("image/webp") 1x,
         url("../../img/form/form-background-desktop@2x.webp") type("image/webp") 2x,
