--- a/source/sass/blocks/programs.scss
+++ b/source/sass/blocks/programs.scss
@@ -1,14 +1,14 @@
 .programs {
   @media (max-width: $mobile-width-max) {
-    padding: 56px 15px 50px;
+    padding: 56px 15px 45px;
   }
 
   @media ((min-width: $tablet-width-min) and (max-width: $tablet-width-max)) {
-    padding: 50px 0 47px 45px; // 50 0 25 45
+    padding: 50px 0 47px 45px;
   }
 
   @media (min-width: $desktop-width-min) {
-    padding: 62px 100px 71px;
+    padding: 62px 100px 72px;
   }
 }
 
@@ -19,15 +19,15 @@
   @media (max-width: $mobile-width-max) {
     @include flex(row, flex-start, flex-start);
     flex-wrap: wrap;
-
+row-gap: 30px;
     width: $mobile-content-width;
   }
 
   @media ((min-width: $tablet-width-min) and (max-width: $tablet-width-max)) {
     @include flex(row, space-between, center);
     flex-wrap: wrap;
-    gap: 40px;
-
+    column-gap: 10px;
+    row-gap: 40px;
     padding-bottom: 25px;
     width: calc($tablet-width-min - 45px);
     overflow: hidden;
@@ -37,7 +37,6 @@
     @include flex(row, space-between, center);
     flex-wrap: wrap;
     gap: 42px;
-
     width: $desktop-content-width;
   }
 }
@@ -48,7 +47,7 @@
   color: $accent-color;
 
   @media (max-width: $mobile-width-max) {
-    margin-bottom: 34px;
+    margin-bottom: 4px;
     font-size: 20px;
     line-height: 20px;
   }
@@ -67,6 +66,7 @@
 .programs__details {
   @media (max-width: $mobile-width-max) {
     order: 3;
+    margin-bottom: 5px; // для переполнения
     width: 205px;
     padding: 15px 50px 15px 31px;
   }
@@ -85,7 +85,7 @@
   border-radius: 12px;
 
   @media (max-width: $mobile-width-max) {
-    margin-bottom: 30px;
+    // margin-bottom: 30px;
     width: 290px;
     height: 400px;
   }
@@ -219,6 +219,7 @@
 .programs__slide-description-wrapper {
   @include flex(row, space-between, center);
   flex-wrap: wrap;
+  row-gap: 10px; // для переполнения
   overflow-y: scroll;
   overflow-x: hidden;
 
