--- a/source/sass/blocks/custom-select.scss
+++ b/source/sass/blocks/custom-select.scss
@@ -6,8 +6,8 @@
     content: "";
     display: block;
     position: absolute;
-    top: 60%; // 22px
-    right: 20px;
+    top: 60%;
+    right: 21px;
     width: 16px;
     height: 8px;
     mask-image: url("/__spritemap#sprite-arrow-down-view");
