--- a/source/sass/blocks/faq.scss
+++ b/source/sass/blocks/faq.scss
@@ -75,7 +75,7 @@
 
   @media ((min-width: $tablet-width-min) and (max-width: $tablet-width-max)) {
     width: $tablet-content-width;
-    padding: 29px 30px 31px 30px;
+    padding: 30px;
   }
 
   @media (min-width: $desktop-width-min) {
