--- a/source/sass/blocks/news.scss
+++ b/source/sass/blocks/news.scss
@@ -308,7 +308,7 @@
   border-bottom-right-radius: 12px;
 
   @media (max-width: $mobile-width-max) {
-    padding: 10px 18px 4px 0;
+    padding: 10px 18px 4px 0; // 10 18 5 0 на винде
     width: 200px;
     font-size: 16px;
     line-height: 18px;
@@ -345,7 +345,7 @@
   background-color: $extra-light-color;
 
   @media (max-width: $mobile-width-max) {
-    padding: 12px 10px 10px 0;
+    padding: 12px 10px 10px 0; // 12 10 9 0 на видне
     width: 263px;
   }
 
