--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -3,31 +3,30 @@
 @import "vendor/swiper-bundle.css";
 
 // common
-@import "common/fonts.scss";
-@import "common/variables.scss";
-@import "common/mixins.scss";
-@import "common/global.scss";
-@import "common/visually-hidden.scss";
+@import "common/fonts";
+@import "common/variables";
+@import "common/mixins";
+@import "common/global";
+@import "common/visually-hidden";
 
 // blocks
-@import "blocks/button.scss";
-@import "blocks/button-arrow.scss";
-@import "blocks/custom-select.scss";
-@import "blocks/custom-checkbox.scss";
-@import "blocks/arrow.scss";
-@import "blocks/social-list.scss";
-@import "blocks/overlay.scss";
-@import "blocks/page-body.scss";
-@import "blocks/modal.scss";
-@import "blocks/header.scss";
-@import "blocks/hero.scss";
-@import "blocks/about.scss";
-@import "blocks/grant.scss";
-@import "blocks/programs.scss";
-@import "blocks/news.scss";
-@import "blocks/faq.scss";
-@import "blocks/reviews.scss";
-@import "blocks/contacts.scss";
-@import "blocks/form.scss";
-@import "blocks/footer.scss";
-
+@import "blocks/button";
+@import "blocks/button-arrow";
+@import "blocks/custom-select";
+@import "blocks/custom-checkbox";
+@import "blocks/arrow";
+@import "blocks/social-list";
+@import "blocks/overlay";
+@import "blocks/page-body";
+@import "blocks/modal";
+@import "blocks/header";
+@import "blocks/hero";
+@import "blocks/about";
+@import "blocks/grant";
+@import "blocks/programs";
+@import "blocks/news";
+@import "blocks/faq";
+@import "blocks/reviews";
+@import "blocks/contacts";
+@import "blocks/form";
+@import "blocks/footer";
