--- a/source/sass/blocks/custom-checkbox.scss
+++ b/source/sass/blocks/custom-checkbox.scss
@@ -1,5 +1,6 @@
 .custom-checkbox {
   @include flex(row, flex-start, center);
+
   flex-wrap: wrap;
 }
 
@@ -57,51 +58,51 @@
 }
 
 // состояния чекбокса
-.custom-checkbox__input:hover+.custom-checkbox__label::before,
-.custom-checkbox__input:focus+.custom-checkbox__label::before {
+.custom-checkbox__input:hover + .custom-checkbox__label::before,
+.custom-checkbox__input:focus + .custom-checkbox__label::before {
   background-color: transparent;
   border-color: $basic-light-color;
 }
 
-.custom-checkbox__input:disabled+.custom-checkbox__label::before {
+.custom-checkbox__input:disabled + .custom-checkbox__label::before {
   background-color: rgba(255, 255, 255, 0.6);
   border-color: $basic-light-color;
 }
 
-.custom-checkbox__input:user-invalid+.custom-checkbox__label::before {
+.custom-checkbox__input:user-invalid + .custom-checkbox__label::before {
   background-color: rgba(255, 94, 102, 0.2);
-  border-color: #FF5E66;
+  border-color: #ff5e66;
 }
 
 // если чекбокс на белом фоне
-.custom-checkbox__input--secondary:hover+.custom-checkbox__label::before,
-.custom-checkbox__input--secondary:focus+.custom-checkbox__label::before {
+.custom-checkbox__input--secondary:hover + .custom-checkbox__label::before,
+.custom-checkbox__input--secondary:focus + .custom-checkbox__label::before {
   border-color: $accent-color;
 }
 
-.custom-checkbox__input--secondary:disabled+.custom-checkbox__label::before {
+.custom-checkbox__input--secondary:disabled + .custom-checkbox__label::before {
   border-color: $accent-color;
   background-color: rgba(49, 109, 194, 0.5);
 }
 
 // состояния чекбокса, если проставлена галочка
-.custom-checkbox__input:checked:hover+.custom-checkbox__label::after,
-.custom-checkbox__input:checked:focus+.custom-checkbox__label::after,
-.custom-checkbox__input:checked:disabled+.custom-checkbox__label::after {
+.custom-checkbox__input:checked:hover + .custom-checkbox__label::after,
+.custom-checkbox__input:checked:focus + .custom-checkbox__label::after,
+.custom-checkbox__input:checked:disabled + .custom-checkbox__label::after {
   background-color: $basic-light-color;
 }
 
-.custom-checkbox__input:checked:disabled+.custom-checkbox__label::before {
+.custom-checkbox__input:checked:disabled + .custom-checkbox__label::before {
   background-color: $disabled-color;
   border-color: $disabled-color;
 }
 
-.custom-checkbox__input:checked+.custom-checkbox__label::after {
+.custom-checkbox__input:checked + .custom-checkbox__label::after {
   display: block;
 }
 
 // если чекбокс на белом фоне + проставлена галочка
-.custom-checkbox__input--secondary:checked:hover+.custom-checkbox__label::after,
-.custom-checkbox__input--secondary:checked:focus+.custom-checkbox__label::after {
+.custom-checkbox__input--secondary:checked:hover + .custom-checkbox__label::after,
+.custom-checkbox__input--secondary:checked:focus + .custom-checkbox__label::after {
   background-color: $accent-color;
 }
