--- a/source/sass/blocks/modal.scss
+++ b/source/sass/blocks/modal.scss
@@ -1,4 +1,4 @@
-.modal__wrapper {
+.modal {
   position: absolute;
   z-index: 20;
   left: 0;
@@ -19,11 +19,11 @@
   }
 }
 
-.modal__wrapper--closed {
+.modal--closed {
   display: none;
 }
 
-.modal {
+.modal__wrapper {
   margin: 0 auto;
 }
 
@@ -36,13 +36,13 @@
   @include flex(column, flex-start, flex-start);
 
   @media (max-width: $mobile-width-max) {
-    padding: 36px 15px 40px 15px;
+    padding: 36px 15px 40px;
     width: $mobile-content-width;
     gap: 15px;
   }
 
   @media (min-width: $tablet-width-min) {
-    padding: 55px 80px 60px 80px;
+    padding: 55px 80px 60px;
     width: 510px;
     gap: 20px;
   }
@@ -56,6 +56,7 @@
   height: 16px;
   mask-image: url("/__spritemap#sprite-close-menu-view");
   background-color: $accent-color;
+  cursor: pointer;
 
   @media (max-width: $mobile-width-max) {
     top: 20px;
@@ -126,6 +127,7 @@
 .modal__input-wrapper {
   // обертка нужна для стилизации состояния disabled
   @include flex(column, flex-start, flex-start);
+
   width: 100%;
 
   @media (max-width: $mobile-width-max) {
@@ -191,7 +193,7 @@
   }
 }
 
-.modal__input:disabled~.modal__label {
+.modal__input:disabled ~ .modal__label {
   color: rgba(169, 175, 183, 0.6);
 }
 
