--- a/source/sass/blocks/news.scss
+++ b/source/sass/blocks/news.scss
@@ -4,11 +4,11 @@
   }
 
   @media ((min-width: $tablet-width-min) and (max-width: $tablet-width-max)) {
-    padding: 50px 45px 83px;
+    padding: 50px 45px 60px;
   }
 
   @media (min-width: $desktop-width-min) {
-    padding: 60px 100px 92px;
+    padding: 60px 100px 70px;
   }
 }
 
@@ -417,12 +417,12 @@
 
   @media ((min-width: $tablet-width-min) and (max-width: $tablet-width-max)) {
     left: 36%;
-    bottom: -62px;
+    bottom: -10px;
   }
 
   @media (min-width: $desktop-width-min) {
     left: 525px;
-    bottom: -73px;
+    bottom: -10px;
   }
 }
 
@@ -484,12 +484,8 @@
     bottom: 2px;
   }
 
-  @media ((min-width: $tablet-width-min) and (max-width: $tablet-width-max)) {
-    bottom: -57px;
-  }
-
-  @media (min-width: $desktop-width-min) {
-    bottom: -68px;
+  @media (min-width: $tablet-width-min) {
+    bottom: -5px;
   }
 }
 
